--- a/pages/recordInfo/recordInfo.wxss
+++ b/pages/recordInfo/recordInfo.wxss
@@ -21,12 +21,11 @@
 
 .questionInfo {
   display: flex;
-  text-align: center;
-  width: 85%;
+  align-items: center;
+  width: 90%;
   margin: 0 auto;
   color: #808080;
   font-size: 26rpx;
-  margin-bottom:36rpx;
   justify-content: space-between;
 }
 
@@ -46,30 +45,29 @@
   display: flex;
   align-items:center;
   padding: 10rpx;
-  border: 2px solid #aaa;
-  border-radius: 24rpx;
+  border-radius: 12rpx;
   margin-bottom: 30rpx;
   cursor: pointer;
+  box-shadow: 0px 4px 8px 0px rgba(219,220,233,0.8);
 }
 
 .optionSelected {
   display: flex;
   align-items:center;
   padding: 10rpx;
-  border: 2px solid #3481a0;
-  border-radius: 24rpx;
+  border: 2rpx solid #1569E4;
+  color: #1569E4;
+  border-radius: 12rpx;
   margin-bottom: 30rpx;
   cursor: pointer;
+  box-shadow: 0px 4px 8px 0px rgba(219,220,233,0.6);
 }
 
 .favorQuestion {
   display: inline;
-  margin-left: 20rpx;
-  border: 2px solid #aaa;
-  border-radius: 12rpx;
-  padding: 4rpx;
-  height: 36rpx;
-  width: 36rpx;
+  height: 76rpx;
+  width: 76rpx;
+  margin-right: 12rpx;
 }
 
 .optionText {
