--- a/pages/exercise/exercise.wxss
+++ b/pages/exercise/exercise.wxss
@@ -21,7 +21,7 @@
 .questionInfo {
   display: flex;
   text-align: center;
-  width: 90%;
+  width: 95%;
   margin: 0 auto;
   margin-bottom: 20rpx;
   justify-content: space-between;
@@ -33,39 +33,34 @@
   display: flex;
   justify-content: flex-end;
   margin-bottom: 40rpx;
+  align-items: center;
 }
 
 .nextQuestion {
   display: inline;
   margin-left: 20rpx;
-  border: 2px solid #aaa;
-  border-radius: 6rpx;
-  padding: 4rpx;
-  border-top-right-radius: 28rpx;
-  border-bottom-right-radius: 28rpx;
-  height: 50rpx;
-  width: 50rpx;
+  height: 56rpx;
+  width: 56rpx;
 }
 
 .foreQuestion {
   display: inline;
   margin-left: 60rpx;
-  border: 2px solid #aaa;
-  border-radius: 6rpx;
-  border-top-left-radius: 28rpx;
-  border-bottom-left-radius: 28rpx;
-  padding: 4rpx;
-  height: 50rpx;
-  width: 50rpx;
+  height: 56rpx;
+  width: 56rpx;
 } 
 
 .favorQuestion {
   display: inline;
-  border: 2px solid #aaa;
-  border-radius: 12rpx;
-  padding: 4rpx;
-  height: 50rpx;
-  width: 50rpx;
+  height: 76rpx;
+  width: 76rpx;
+  margin-right: 12rpx;
+}
+
+.listQuestion {
+  display: inline;
+  height: 76rpx;
+  width: 76rpx;
 }
 
 .options {
@@ -81,20 +76,22 @@
   display: flex;
   align-items:center;
   padding: 10rpx;
-  border: 2px solid #aaa;
-  border-radius: 24rpx;
+  border-radius: 12rpx;
   margin-bottom: 30rpx;
   cursor: pointer;
+  box-shadow: 0px 4px 8px 0px rgba(219,220,233,0.8);
 }
 
 .optionSelected {
   display: flex;
   align-items:center;
   padding: 10rpx;
-  border: 2px solid #3481a0;
-  border-radius: 24rpx;
+  border: 2rpx solid #1569E4;
+  color: #1569E4;
+  border-radius: 12rpx;
   margin-bottom: 30rpx;
   cursor: pointer;
+  box-shadow: 0px 4px 8px 0px rgba(219,220,233,0.6);
 }
 
 .optionText {
@@ -108,7 +105,7 @@
   border-radius: 24rpx;
   width: 94%;
   height: 100rpx;
-  background-color: #3481a0;
+  background-color: #1569E4;
   color: #fff;
   align-items: center;
   justify-content: center;
@@ -139,7 +136,7 @@
 .next-button {
   display: flex;
   padding: 10rpx;
-  background-color: #2196f3;
+  background-color: #1569E4;
   color: #fff;
   align-items:center;
   text-align: center;
@@ -153,7 +150,7 @@
 }
 
 .correct {
-  color: #3481a0;
+  color: #1569E4;
 }
 
 .wrong {
@@ -226,7 +223,7 @@
   bottom: 120rpx;
   width: 30%;
   height: 54rpx;
-  border: 2rpx solid #3481a0;
+  border: 2rpx solid #1569E4;
   background-color: #fff;
   box-shadow: 0 0rpx 4rpx rgba(0, 0, 0, 0.2);
   border-radius: 20rpx;
@@ -261,9 +258,8 @@
 
 .close-btn {
   align-self: flex-end;
-  height: 100rpx;
+  height: 80rpx;
   width: 80rpx;
-  margin-right: 20rpx;
 }
 
 .info-con {
@@ -273,44 +269,46 @@
 .answer-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: left;
+  justify-content: flex-start;
   padding: 20rpx;
   padding-left: 30rpx;
 }
 
 .exam-info {
-  width: 100rpx;
-  height: 100rpx;
-  line-height: 100rpx;
+  width: 64rpx;
+  height: 64rpx;
+  line-height: 64rpx;
   text-align: center;
   border-radius: 50%;
   margin-bottom: 20rpx;
-  margin-right: 36rpx;
-  font-size: 36rpx;
+  margin-right: 40rpx;
+  font-size: 28rpx;
 }
 
 .answered {
-  background-color: #2196f3;
-  color: white;
+  color: #2196f3;
+  border: solid 2rpx #2196f3;
 }
 
 .unanswered {
-  background-color: grey;
-  color: white;
+  color: #999;
+  border: solid 4rpx #ddd;
 }
 
 .wrongAnswer {
-  background-color: #f05e54;
-  color: white;
+  color: #f05e54;
+  border: solid 2rpx #f05e54;
 }
 
 .trueAnswer {
-  background-color: #4dda98;
-  color: white;
+  color: #0FB371;
+  border: solid 4rpx #0FB371;
+
 }
 
 .current {
-  background-color: rgb(228, 191, 110);
+  background-color: rgb(255, 194, 64);
+  color: #fff;
 }
 
 .null {
@@ -339,6 +337,7 @@
   width: 18%;
   height: 56rpx;
   border-radius: 20rpx;
+  font-size: 28rpx;
 }
 
 .mode-class {
@@ -370,9 +369,32 @@
 }
 
 .point-name {
-  border: 2rpx solid #3481a0;
+  border: 2rpx solid #1569E4;
+  color: #1569E4;
+  background:rgba(195,220,255,0.20);
   padding: 4rpx 12rpx 4rpx 12rpx;
-  border-radius: 30rpx;
+  border-radius: 8rpx;
   font-size: 26rpx;
-  color: #505050;
+}
+
+.process {
+  display: flex;
+  align-items: center;
+  margin-left: 20rpx;
+}
+
+progress {
+  width: 320rpx;
+  margin-right: 20rpx;
+  border-radius: 40rpx; /* 设置进度条的圆角 */
+  height: 40rpx; /* 设置进度条的高度 */
+}
+
+.progress50 .wx-progress-inner-bar {
+  border-radius: 16rpx !important;
+  background: linear-gradient(to right, #f3f3f3, #6dd5fa) !important;
+}
+.progress90 .wx-progress-inner-bar {
+  border-radius: 16rpx !important;
+  background: linear-gradient(to right, #f3f3f3, #6dd5fa, #2980b9) !important;  
 }
