--- a/pages/favorExam/favorExam.wxml
+++ b/pages/favorExam/favorExam.wxml
@@ -2,9 +2,14 @@
 <view class="container" wx:else="{{noData}}">
   <view class="question">
     <view class="questionInfo">
-      <text>-{{currentIndex + 1}}/{{totalData}}-</text>
+      <view class="process">
+        <progress percent="{{(currentIndex + 1) * 100 /totalData}}" strokeWidth="8" active activeColor="#3a448a" borderRadius="16" class="{{item.percent == 50 ? 'progress50' : 'progress90'}}"></progress>
+        <text>{{currentIndex + 1}}/{{totalData}}</text>
+      </view>
     </view>
-    <text user-select="true" class="questionTexts">{{questionData[indexList[currentIndex]].question}}</text>
+    <view class="questionTexts">
+      <wemark md="{{questionData[indexList[currentIndex]].question}}" link highlight type="wemark"></wemark>
+    </view>
     <view wx:if="{{questionData[indexList[currentIndex]].question_img.length != 0}}" style="width: 100%; height: 15vh; overflow: hidden;">
       <image src="{{questionData[indexList[currentIndex]].question_img}}" mode="aspectFit" style="width: 100%; height: 100%;"/>
     </view>
@@ -35,7 +40,9 @@
       <view>本题正确率：{{currentRate}}%</view>
     </view>
     <view class="separator"></view>
-    <text user-select="true">{{questionData[questionIndex].comments}}</text>
+    <view class="borders">
+      <wemark md="{{questionData[questionIndex].comments}}" link highlight type="wemark"></wemark>
+    </view>
   </view>
   <view wx:if="{{questionData[indexList[currentIndex]].comment_img.length != 0}}" class="commentsimg">
     <image src="{{questionData[indexList[currentIndex]].comment_img}}" mode="aspectFit" style="width: 100%; height: 100%;"/>
