--- a/pages/pointList/pointList.wxss
+++ b/pages/pointList/pointList.wxss
@@ -1,22 +1,59 @@
 /* pages/pointList/pointList.wxss */
 .point{
-  background-color: #1569E4;
-  height:90px;
-  text-align:center;
+  background-image: url(http://www.skyseaee.cn/uploads/exercise_img/20240606/66608e20138d2.png);
+  height:390rpx;
+  background-size: cover;
+  background-position: center;
 }
 .title{
-  font-size: 30rpx;
-  padding-top: 40rpx;
-  color: #fff;
+  padding-top: 110rpx;
+  padding-left: 45px;
+  font-size: 21px;
+  color: #FFFFFF;
+  font-weight: 500;
 }
 .number{
-  margin-top: 20px;
-  font-size: 50rpx;
-  font-weight: bold;
-  color: #fff;
+  padding-left: 45px;
+  margin-top: 8rpx;
+  font-size: 48px;
+  color: #FFFFFF;
+  font-weight: 500;
 }
 .line{
   width:100%;
-  height:10px;
+  height:10rpx;
   background:#f3f3f3;
+}
+
+.outer {
+  display: flex;
+  margin: 0 24rpx;
+  justify-content: space-between;
+  height: 140rpx;
+  align-items: center;
+}
+
+.names {
+  font-size: 16px;
+  color: #000000;
+  font-weight: 500;
+}
+
+.infos {
+  display: flex;
+  flex-direction: column;
+}
+
+.times {
+  margin-top: 20rpx;
+  font-size: 28rpx;
+  color: #B3B3B3;
+  font-weight: 400;
+}
+
+.nums {
+  font-size: 18px;
+  color: #B3B3B3;
+  letter-spacing: 0;
+  font-weight: 400;
 }
