--- a/pages/pointRule/pointRule.wxss
+++ b/pages/pointRule/pointRule.wxss
@@ -2,10 +2,25 @@
 .page{
   padding: 20px;
 }
+
+.point {
+  height: 16rpx;
+  width: 16rpx;
+  background-color: rgb(83, 83, 241);
+  border-radius: 50%;
+  margin-right: 16rpx;
+}
+
 .title{
-  margin-top: 10px;
+  display: flex;
+  align-items: center;
   font-weight: bold;
+  font-size: 32rpx;
+  color: #222;
+  margin-top: 48rpx;
 }
 .content{
-  margin-top: 10px;
+  margin-top: 6rpx;
+  color: #838383;
+  line-height: 48rpx;
 }
