--- a/pages/wrongQuestion/wrongQuestion.wxss
+++ b/pages/wrongQuestion/wrongQuestion.wxss
@@ -26,7 +26,7 @@
 .questionInfo {
   display: flex;
   text-align: center;
-  width: 90%;
+  width: 95%;
   margin: 0 auto;
   margin-bottom:36rpx;
   justify-content: space-between;
@@ -37,44 +37,31 @@
   display: flex;
   justify-content: flex-end;
   margin-bottom: 40rpx;
+  align-items: center;
 }
 
 .nextQuestion {
   display: inline;
   margin-left: 20rpx;
-  border: 2px solid #aaa;
-  border-radius: 6rpx;
-  padding: 4rpx;
-  border-top-right-radius: 28rpx;
-  border-bottom-right-radius: 28rpx;
-  height: 50rpx;
-  width: 50rpx;
+  height: 56rpx;
+  width: 56rpx;
 }
 
 .foreQuestion {
   display: inline;
   margin-left: 60rpx;
-  border: 2px solid #aaa;
-  border-radius: 6rpx;
-  border-top-left-radius: 28rpx;
-  border-bottom-left-radius: 28rpx;
-  padding: 4rpx;
-  height: 50rpx;
-  width: 50rpx;
+  height: 56rpx;
+  width: 56rpx;
 } 
 
 .favorQuestion {
   display: inline;
-  margin-left: 320rpx;
-  border: 2px solid #aaa;
-  border-radius: 12rpx;
-  padding: 4rpx;
-  height: 50rpx;
-  width: 50rpx;
+  height: 76rpx;
+  width: 76rpx;
+  margin-right: 12rpx;
 }
 
 .options {
-  margin-bottom: 20rpx;
   width: 90%;
   padding: 20rpx;
 }
@@ -83,21 +70,22 @@
   display: flex;
   align-items:center;
   padding: 10rpx;
-  border: 2px solid #aaa;
-  border-radius: 24rpx;
+  border-radius: 12rpx;
   margin-bottom: 30rpx;
   cursor: pointer;
-  color: #505050;
+  box-shadow: 0px 4px 8px 0px rgba(219,220,233,0.8);
 }
 
 .optionSelected {
   display: flex;
   align-items:center;
   padding: 10rpx;
-  border: 2px solid #3481a0;
-  border-radius: 24rpx;
+  border: 2rpx solid #0FB371;
+  color: #0FB371;
+  border-radius: 12rpx;
   margin-bottom: 30rpx;
   cursor: pointer;
+  box-shadow: 0px 4px 8px 0px rgba(219,220,233,0.6);
 }
 
 .optionText {
@@ -130,7 +118,7 @@
 }
 
 .correct {
-  color: #3481a0;
+  color: #0FB371;
 }
 
 .wrong {
@@ -176,4 +164,27 @@
   padding: 16rpx;
   border-radius: 20rpx;
   margin-bottom: 16rpx;
+  font-size: 28rpx;
+}
+
+.process {
+  display: flex;
+  align-items: center;
+  margin-left: 20rpx;
+}
+
+progress {
+  width: 560rpx;
+  margin-right: 20rpx;
+  border-radius: 40rpx; /* 设置进度条的圆角 */
+  height: 40rpx; /* 设置进度条的高度 */
+}
+
+.progress50 .wx-progress-inner-bar {
+  border-radius: 16rpx !important;
+  background: linear-gradient(to right, #f3f3f3, #6dd5fa) !important;
+}
+.progress90 .wx-progress-inner-bar {
+  border-radius: 16rpx !important;
+  background: linear-gradient(to right, #f3f3f3, #6dd5fa, #2980b9) !important;  
 }
